[JSON-2] Simple CSS for JSON PASER - button CSS

--- a/index.css
+++ b/index.css
@@ -5,6 +5,23 @@ body{
     min-height: 100px;
 }
 
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button1 {
+    padding: 10px 24px;
+    margin: 5px;
+}
+
 .container{
     display: flex;
     flex-direction: row;
@@ -14,6 +31,14 @@ body{
     border: 1px solid;
     min-height: 500px;
     margin: 5px;
-    width: 50%;
+    /*width: 40%;*/
     /*padding: 5px;*/
+}
+
+.col1 {
+    width: 40%;
+}
+
+.col2 {
+    flex-grow: 1;
 }
