[JSON-2] Simple CSS for JSON PASER - 2 - show object null and number

--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ ul{
 .container{
     display: flex;
     flex-direction: row;
-    height: 90vh;
+    min-height: 90vh;
 }
 .col{
     border: 1.3px solid;
