--- a/script/css/index.css
+++ b/script/css/index.css
@@ -33,12 +33,12 @@ ul{
 .container{
     display: flex;
     flex-direction: row;
-    min-height: 90vh;
+    min-height: 85vh;
 }
 .col{
     border: 1.3px solid;
     border-radius: 3px;
-    min-height: 600px;
+    /*min-height: 600px;*/
     margin: 5px;
 }
 
